--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,8 @@
 * {
     color: var(--electric-green);
     font-family: nunito;
+    margin: 0;
+    padding: 0;
 }
 
 body {
@@ -102,6 +104,8 @@ a:hover {
     height: 3.25rem;
     background-color: rgb(110,110,110);
     font-size: 23px;
+    margin-right: -.25rem;
+    margin-left: -.25rem;
 }
 
 #user-signup-form {
@@ -110,7 +114,7 @@ a:hover {
     margin-top: -7rem;
 }
 
-#user-signup-form > input, #account-recovery-input {
+#user-signup-form > input, #account-recovery-input, #height_box > input, #weight {
     height: 30px;
     border-radius: 10px;
 	border: 2px solid rgba(0, 0, 0, 0);
@@ -121,10 +125,32 @@ a:hover {
 	margin-bottom: 22px;
 	transition: .3s;
     color: darkgreen;
-    width: 20rem;
+    
 }
 
-#user-signup-form > input::placeholder {
+#height_box, #weight_box {
+    width: 352px;
+    display: flex;
+}
+
+#height_box > input {
+    width: 40px;
+    margin-right: 20px;
+}
+
+#weight {
+    width: 60px;
+    margin-left: -7px;
+}
+
+#height_label, #weight_label {
+    font-weight: bolder;
+    font-size: 20px;
+    padding-top: 12px;
+    margin-right: 20px;
+}
+
+input::placeholder {
     color: black;
 }
 
@@ -143,6 +169,12 @@ a:hover {
 
 #account-recovery-text {
     font-size: 30px;
+    margin-bottom: 12px;
+}
+
+#account-recovery-form {
+    display: flex;
+    flex-direction: column;
 }
 
 #account-recovery-input:focus {
