Added check for duplicate username/email during the registration process. Created error pages for each and redirects in case of error.

--- a/code/views/login-error.ejs
+++ b/code/views/login-error.ejs
@@ -18,7 +18,7 @@
         <input class="input_account_info_box" id="input_password_box" name="password" type="password" placeholder="Password" required>
         <div class="button_box" id="login_button_box">
             <a href="/">
-                <button type="button" class="" id="login_error_back_button">Back</button>
+                <button type="button" class="login_error_back_button">Back</button>
             </a>
             <button type="submit" class="" id="login_submit_button">Submit</button>
         </div>
