--- a/code/public/style.css
+++ b/code/public/style.css
@@ -93,7 +93,7 @@ a:hover {
     width: 22rem;
 }
 
-.button_box > button, #login_error_back_button {
+.button_box > button, .login_error_back_button {
     width: 10rem;
     height: 3rem;
     justify-content: space-around;
@@ -105,7 +105,7 @@ a:hover {
     cursor: pointer;
 }
 
-.button_box > button:hover, #login_error_back_button:hover {
+.button_box > button:hover, .login_error_back_button:hover {
     width: 10.5rem;
     height: 3.25rem;
     background-color: rgb(110,110,110);
@@ -190,6 +190,10 @@ input::placeholder {
 
 #account_recovery_input:focus {
     background-color: white;
+}
+
+.red_text {
+    color: red;
 }
 
 .hide {
