--- a/code/public/style.css
+++ b/code/public/style.css
@@ -29,6 +29,7 @@ a:hover {
 #banner_box {
     height: 22rem;
     display: flex;
+    margin-bottom: -2rem;
 }
 
 #banner_text {
@@ -93,7 +94,7 @@ a:hover {
     width: 22rem;
 }
 
-.button_box > button, .login_error_back_button {
+.button_box > button, .login_error_back_button, #account_recovery_submit_button {
     width: 10rem;
     height: 3rem;
     justify-content: space-around;
@@ -105,7 +106,7 @@ a:hover {
     cursor: pointer;
 }
 
-.button_box > button:hover, .login_error_back_button:hover {
+.button_box > button:hover, .login_error_back_button:hover, #account_recovery_submit_button:hover {
     width: 10.5rem;
     height: 3.25rem;
     background-color: rgb(110,110,110);
@@ -117,7 +118,7 @@ a:hover {
 #user_signup_form {
     display: flex;
     flex-direction: column;
-    margin-top: -7rem;
+    margin-top: -4.5rem;
 }
 
 #signup_form_text {
@@ -173,12 +174,12 @@ input::placeholder {
 }
 
 #account_recovery_links {
-    margin-top: 7rem;
+    margin-top: 4rem;
     cursor: pointer;
 }
 
 #account_recovery_text {
-    margin-top: 5rem;
+    margin-top: 4rem;
     font-size: 30px;
     margin-bottom: 12px;
 }
@@ -186,6 +187,10 @@ input::placeholder {
 #account_recovery_form {
     display: flex;
     flex-direction: column;
+}
+
+#account_recovery_form > input {
+    margin-top: 1rem;
 }
 
 #account_recovery_input:focus {
