--- a/code/views/index.ejs
+++ b/code/views/index.ejs
@@ -48,24 +48,24 @@
         </div>
         <div class="hide button_box" id="signup_button_box">
             <button type="button" class="hide" id="signup_back_button" onClick="ClickSignupButton()">Back</button>
-            <button type="submit" class="hide" id="signup_submit_button">Submit</button>
+            <button onclick="FormValidation()" type="submit" class="hide" id="signup_submit_button">Submit</button>
         </div>
     </form>
 
     <!-- Account Recovery Active -->
     <h2 id="account_recovery_text" class="hide">Forgot Username or Password?</h2>
-    <form id="account_recovery_form">
-        <input class="hide" id="account_recovery_input" type="email" placeholder="Email Address" required>
+    <form method="post" action="/recover-account" id="account_recovery_form">
+        <input class="hide" id="account_recovery_input" name="email" type="email" placeholder="Email Address" required>
         <div class="hide button_box" id="account_recovery_button_box">
             <button type="button" class="hide" id="account_recovery_back_button" onClick="ClickAccountRecoveryLinks()">Back</button>
             <button type="submit" class="hide" id="account_recovery_submit_button">Submit</button>
         </div>
     </form>
     
-
     <div id="account_recovery_links">
         <a onclick="ClickAccountRecoveryLinks()">Forgot Username?</a>
         <a onclick="ClickAccountRecoveryLinks()">Reset Password?</a>
     </div>
+    
 </body>
 </html>
