Made minor changes in registration form validation. Fixed the broken account recovery links on the login-error page by making a new script file specific for the login error page and a new function to change the dom when the links are clicked.

--- a/code/views/index.ejs
+++ b/code/views/index.ejs
@@ -20,7 +20,7 @@
         <input class="input_account_info_box hide" id="input_password_box" name="password" type="password" placeholder="Password" required>
         <div class="hide button_box" id="login_button_box">
             <button type="button" class="hide" id="login_back_button" onClick="ClickLoginButton()">Back</button>
-            <button type="submit" class="hide" id="login_submit_button">Submit</button>
+            <button onclick="LoginValidation()" type="submit" class="hide" id="login_submit_button">Submit</button>
         </div>
     </form>
     <div class="hide" style="cursor: pointer;" id="login_account_recovery_links">
