--- a/code/public/style.css
+++ b/code/public/style.css
@@ -70,6 +70,7 @@ a:hover {
     color: red;
     font-weight: bolder;
     margin-bottom: 1rem;
+    margin-top: -2.25rem;
 }
 
 .input_account_info_box {
