--- a/code/views/index.ejs
+++ b/code/views/index.ejs
@@ -6,26 +6,28 @@
     <title>Necessitivity - Login</title>
     <link rel="stylesheet" href="/style.css"/>
     <script src="/script.js" defer></script>
+    <script src="/jquery.js" defer></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 </head>
 <body>
     <div id="banner_box">
         <h1 id="banner_text">Necessitivity</h1>
     </div>
-    <button class="login_button" id="login" onclick="ClickLoginButton()">Login</button>
-    <button class="login_button" id="signup" onclick="ClickSignupButton()">Sign-Up</button>
+    <button class="login_button" id="login">Login</button>
+    <button class="login_button" id="signup">Sign-Up</button>
 
     <!-- Login Active -->
     <form method="post" action="/login-user" class="hide" id="user_login_form" name="login" onsubmit="return LoginValidation()">
         <input class="input_account_info_box hide" id="input_username_box" name="username" type="text" placeholder="Username"  required>
         <input class="input_account_info_box hide" id="input_password_box" name="password" type="password" placeholder="Password" required>
         <div class="hide button_box" id="login_button_box">
-            <button type="button" class="hide" id="login_back_button" onClick="ClickLoginButton()">Back</button>
+            <button type="button" class="hide" id="login_back_button">Back</button>
             <button onclick="LoginValidation()" type="submit" class="hide" id="login_submit_button">Submit</button>
         </div>
     </form>
     <div class="hide" style="cursor: pointer;" id="login_account_recovery_links">
-        <a onclick="ClickLoginAccountRecoveryLinks()">Forgot Username?</a>
-        <a onclick="ClickLoginAccountRecoveryLinks()">Reset Password?</a>
+        <a>Forgot Username?</a>
+        <a>Reset Password?</a>
     </div>
 
     <!-- Signup Active -->
@@ -47,7 +49,7 @@
             <input class="hide" id="weight" type="number" name="weight" placeholder="lbs" required>
         </div>
         <div class="hide button_box" id="signup_button_box">
-            <button type="button" class="hide" id="signup_back_button" onClick="ClickSignupButton()">Back</button>
+            <button type="button" class="hide" id="signup_back_button">Back</button>
             <button type="submit" class="hide" id="signup_submit_button">Submit</button>
         </div>
     </form>
@@ -57,14 +59,14 @@
     <form method="post" name="account_recovery" onsubmit="return AccountRecoveryEmailValidation()" action="/recover-account" id="account_recovery_form">
         <input class="hide" id="account_recovery_input" name="email" type="email" placeholder="Email Address" required>
         <div class="hide button_box" id="account_recovery_button_box">
-            <button type="button" class="hide" id="account_recovery_back_button" onClick="ClickAccountRecoveryLinks()">Back</button>
+            <button type="button" class="hide" id="account_recovery_back_button">Back</button>
             <button type="submit" class="hide" id="account_recovery_submit_button">Submit</button>
         </div>
     </form>
     
     <div id="account_recovery_links">
-        <a onclick="ClickAccountRecoveryLinks()">Forgot Username?</a>
-        <a onclick="ClickAccountRecoveryLinks()">Reset Password?</a>
+        <a>Forgot Username?</a>
+        <a>Reset Password?</a>
     </div>
     
 </body>
