--- a/code/views/index.ejs
+++ b/code/views/index.ejs
@@ -48,6 +48,10 @@
             <div class="hide" id="weight_label">Weight</div>
             <input class="hide" id="weight" type="number" name="weight" placeholder="lbs" required>
         </div>
+        <div class="hide" id="age_box">
+            <div class="hide" id="age_label">Age</div>
+            <input class="hide" id="age" type="number" name="age" placeholder="99" required>
+        </div>
         <div class="hide button_box" id="signup_button_box">
             <button type="button" class="hide" id="signup_back_button">Back</button>
             <button type="submit" class="hide" id="signup_submit_button">Submit</button>
