--- a/code/views/user-page.ejs
+++ b/code/views/user-page.ejs
@@ -17,6 +17,7 @@
     <p style="font-size: x-large; margin-bottom: 1rem;">Height - Ft: <%= data.feet %></p>
     <p style="font-size: x-large; margin-bottom: 1rem;">Height - In: <%= data.inches %></p>
     <p style="font-size: x-large; margin-bottom: 1rem;">Weight - Lbs: <%= data.weight %></p>
+    <p style="font-size: x-large; margin-bottom: 1rem;">Age: <%= data.age %></p>
     <p style="font-size: x-large; margin-bottom: 1rem;">Admin?: <%= data.admin %></p>
     <p style="font-size: x-large; margin-bottom: 1rem;">Account Created: <%= data.accountCreated %></p>
     <a href="/">
