--- a/code/views/user-page.ejs
+++ b/code/views/user-page.ejs
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div id="banner_box">
-        <h1 id="banner_text">Welcome, <%= data.first %></h1>
+        <h1 id="banner_text">Necessitivity</h1>
     </div>
     <p style="font-size: x-large; margin-bottom: 1rem;">Username: <%= data.username %></p>
     <p style="font-size: x-large; margin-bottom: 1rem;">Email: <%= data.email %></p>
@@ -21,7 +21,7 @@
     <p style="font-size: x-large; margin-bottom: 1rem;">Admin?: <%= data.admin %></p>
     <p style="font-size: x-large; margin-bottom: 1rem;">Account Created: <%= data.accountCreated %></p>
     <a href="/">
-        <button class="login_error_back_button">Back</button>
+        <button class="login_error_back_button">Log Out</button>
     </a>
 </body>
 </html>
