--- a/code2/src/App.css
+++ b/code2/src/App.css
@@ -16,7 +16,7 @@
     transition-duration: 200ms;
 }
 
-body {
+.App, body {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -37,6 +37,7 @@ a:hover {
     align-self: center;
     font-size: 100px;
     text-shadow: 5px 5px darkgreen;
+    cursor: pointer;
 }
 
 .login_button, .input_account_info_box {
@@ -65,6 +66,61 @@ a:hover {
     cursor: pointer;
     display: flex;
     gap: 6px;
+}
+
+#user_login_form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.input_account_info_box {
+    color: black;
+    background-color: white;
+    padding-left: 10px;
+    cursor:text;
+}
+
+.input_account_info_box:focus {
+    background-color: var(--electric-green);
+    padding-left: 10px;
+    cursor:text;
+}
+
+.button_box {
+    display: flex;
+    height: 3rem;
+    flex-direction: row;
+    justify-content: space-around;
+    margin-bottom: 1rem;
+    width: 22rem;
+}
+
+.button_box > button {
+    width: 10rem;
+    height: 3rem;
+    justify-content: space-around;
+    border-radius: 20px;
+    background-color: rgb(100,100,100);
+    border-color: white;
+    font-size: 20px;
+    font-weight: bolder;
+    cursor: pointer;
+}
+
+.button_box > button:hover {
+    width: 10.5rem;
+    height: 3.25rem;
+    background-color: rgb(110,110,110);
+    font-size: 23px;
+    margin-right: -.25rem;
+    margin-left: -.25rem;
+}
+
+#login_account_recovery_links {
+    display: flex;
+    gap: 6px;
+    cursor: pointer;
 }
 
 @media (max-width:600px) {
