--- a/code2/src/App.css
+++ b/code2/src/App.css
@@ -27,10 +27,15 @@ a:hover {
     color: darkgreen;
 }
 
-#banner_box {
+.banner_box {
     height: 22rem;
     display: flex;
     margin-bottom: -2rem;
+}
+
+#reg_banner_box {
+    height: 18rem;
+    padding-left: 16px;
 }
 
 #banner_text {
@@ -117,10 +122,97 @@ a:hover {
     margin-left: -.25rem;
 }
 
-#login_account_recovery_links {
+#user_signup_form {
     display: flex;
-    gap: 6px;
-    cursor: pointer;
+    flex-direction: column;
+    margin-top: -4rem; 
+    margin-bottom: 5rem;
+    padding-left: 26px;
+}
+
+#signup_form_text {
+    text-align: center;
+    margin-top: 20px;
+}
+
+#user_signup_form > input, #account_recovery_input, #height_box > input, #weight, #age {
+    height: 30px;
+    border-radius: 10px;
+	border: 2px solid rgba(0, 0, 0, 0);
+	outline: none;
+	background-color: rgba(240, 240, 240, 0.8);
+	padding: 0.5rem 1rem;
+	font-size: 1.1rem;
+	margin-bottom: 22px;
+	transition: .3s;
+    color: darkgreen;
+    
+}
+
+#height_box, #weight_box, #age_box {
+    width: 352px;
+    display: flex;
+}
+
+#height_box > input {
+    width: 40px;
+    margin-right: 20px;
+}
+
+#weight {
+    width: 60px;
+    margin-left: -7px;
+}
+
+#age {
+    width: 60px;
+    margin-left: 22px;
+}
+
+#height_label, #weight_label, #age_label {
+    font-weight: bolder;
+    font-size: 20px;
+    padding-top: 12px;
+    margin-right: 20px;
+}
+
+#height_label {
+    margin-right: 19px;
+}
+
+#age_label {
+    margin-right: 22px;
+}
+
+input::placeholder {
+    color: black;
+}
+
+#user_signup_form > input:active {
+    background-color: var(--electric-green);
+}
+
+#user_signup_form > input:focus{
+    background-color: white;
+}
+
+#account_recovery_text {
+    font-size: 30px;
+    margin-bottom: 12px;
+    text-align: center;
+}
+
+#account_recovery_form {
+    display: flex;
+    flex-direction: column;
+}
+
+#account_recovery_form > input {
+    margin-top: 1rem;
+}
+
+#account_recovery_input:focus {
+    background-color: white;
 }
 
 @media (max-width:600px) {
