--- a/code3/frontend/src/styles/global.css
+++ b/code3/frontend/src/styles/global.css
@@ -12,10 +12,20 @@
   font-family: nunito;
   margin: 0;
   padding: 0;
-  transition-duration: 200ms;
+  transition-duration: 200ms !important;
+  transition-property: all !important;
+  background-color: rgb(30, 30, 30) !important;
 }
 
-.App, body {
+span {
+  color: var(--electric-green) !important;
+}
+
+.navbar {
+  z-index: 2000;
+}
+
+.App{
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -32,16 +42,7 @@ a:hover {
   margin-bottom: -2rem;
 }
 
-#reg_banner_box {
-  height: 18rem;
-  padding-left: 16px;
-}
-
-#reg_banner_text {
-  margin-top: 100px;
-}
-
-#banner_text, #reg_banner_text {
+.banner_text {
   align-self: center;
   text-align: center;
   font-size: 100px;
@@ -120,18 +121,18 @@ a:hover {
 }
 
 input::placeholder {
-  color: black;
+  color: black !important;
 }
 
 
 @media (max-width:768px) {
-  #banner_text {
+  .banner_text {
       font-size:75px;
       margin-top: 75px;
   }
 
   #reg_banner_box {
-    padding-left: 0;
+    padding-left: 16px;
   }
 
   #reg_banner_text {
@@ -141,7 +142,7 @@ input::placeholder {
 }
 
 @media (max-width:570px) {
-  #banner_text {
+  .banner_text {
       font-size:55px;
       margin-top: 100px;
   }
@@ -152,7 +153,7 @@ input::placeholder {
 }
 
 @media (max-width:375px) {
-  #banner_text {
+  .banner_text {
       font-size: 50px;
       margin-top: 125px;
   }
@@ -172,10 +173,14 @@ input::placeholder {
   .login_button, .signup_button {
     width: 18rem;
   }
+
+  .login_button:hover, .signup_button:hover {
+    width: 19rem;
+  }
 }
 
 @media (max-width:330px) {
-  #banner_text {
+  .banner_text {
       font-size: 40px;
   }
   #reg_banner_text {
