--- a/code3/frontend/src/styles/SignUpModal.module.css
+++ b/code3/frontend/src/styles/SignUpModal.module.css
@@ -1,15 +1,22 @@
 .banner_box {
   height: 18rem;
-  padding-left: 32px;
+  display: flex;
+  margin-bottom: -20px;
+  align-self: center;
+  width: 70rem;
+  justify-content: center;
 }
 
 .banner_text {
-  margin-top: 100px;
   align-self: center;
   text-align: center;
   font-size: 100px;
   text-shadow: 5px 5px darkgreen;
   cursor: pointer;
+}
+
+.modal_body {
+  width: 70rem;
 }
 
 .user_signup_form {
@@ -18,67 +25,97 @@
     align-items: center;
     margin-top: -4rem; 
     margin-bottom: 5rem;
-    padding-left: 32px;
+    width: 100%;
   }
   
-#signup_form_text, .registration_error {
+.signup_form_text, .registration_error {
     text-align: center;
-    margin-top: 18px;
+    margin-top: 0;
     margin-bottom: 12px;
     font-size: larger;
   }
 
 .inputField {
-    height: 30px;
+    height: 50px;
     border-radius: 10px;
     border: 2px solid rgba(0, 0, 0, 0);
     outline: none;
-    background-color: rgba(240, 240, 240, 0.8);
+    background-color: white !important;
     padding: 0.5rem 1rem;
     font-size: 1.1rem;
-    margin-bottom: 16px;
+    margin-bottom: 10px;
+    margin-top: -6px;
     transition: .3s;
     color: black;
     display: flex;
     width: 300px;
 }
 
-#weight_box {
+.weight_box {
   width: 300px;
   display: flex;
-  margin-left: -25px;
   margin-bottom: 16px;
 }
 
 .weight_input {
-  width: 60px;
-  margin-left: -7px;
+  width: 100px;
 }
 
 .inputField:focus{
-  background-color: lightgreen;
+  background-color: lightgreen !important;
+  border-color: var(--electric-green);
+  box-shadow: none;
 }
 
 .inputField:active {
-  background-color: var(--electric-green);
+  background-color: var(--electric-green) !important;
+  border-color: darkgreen;
 }
 
 .registration_error {
     color: red;
-    margin-top: -42px;
-    margin-bottom: 72px;
-    padding-left: 32px;
+}
+
+.button_box {
+  display: flex;
+  height: 3rem;
+  flex-direction: row;
+  justify-content: space-around;
+  margin-bottom: 1rem;
+  width: 22rem;
+  align-self: center;
+}
+
+.button_box > * {
+  width: 10rem;
+  height: 3rem;
+  justify-content: space-around;
+  border-radius: 20px;
+  background-color: rgb(100,100,100);
+  border-color: white;
+  font-size: 20px;
+  font-weight: bolder;
+  cursor: pointer;
+  color: var(--electric-green);
+}
+
+.button_box > :hover {
+  width: 10.5rem;
+  height: 3.25rem;
+  background-color: rgb(35,35,35) !important;
+  font-size: 23px;
+  margin-right: -.25rem;
+  margin-left: -.25rem;
+  color: var(--electric-green);
+  border-color: white;
+}
+
+.button_box > :active {
+  border-color: var(--electric-green) !important;
+  color: var(--electric-green) !important;
 }
 
 @media (max-width:768px) {
-  .user_signup_form, .registration_error {
-    padding-left: 16px;
-  }
-
-  .banner_box {
-    padding-left: 16px;
-  }
-
   .banner_text {
     font-size: 75px;
   }
@@ -88,18 +125,18 @@
 @media (max-width:570px) {
   .banner_text {
     font-size: 50px;
-    margin-top: 125px;
+    margin-top: 75px;
+  }
+
+  .signup_form_text {
+    font-size: small;
   }
 }
 
 @media (max-width:375px) {
   .banner_text {
     font-size: 45px;
-    margin-top: 150px;
-  }
-
-  #signup_form_text {
-    font-size: small;
+    margin-top: 75px;
   }
 
   .inputField {
@@ -107,17 +144,29 @@
     align-self: center;
   }
 
-  #weight_box {
-    margin-left: 25px;
-  }
-
   .weight_input {
-    width: 60px;
+    width: 100px;
   }
 
   .registration_error {
     font-size: small;
-}
+  }
+
+  .weight_box {
+    width: 250px;
+  }
+
+  .button_box { 
+    width: 20rem;
+  }
+
+  .button_box > * {
+    width: 9rem;
+  }
+
+  .button_box > :hover {
+    width: 9.5rem;
+  }
 
 }
 
