Added Links to go between pages. Redid styles on sign up modal. Added new folders to further organize code. Connected back button on sign up modal.

--- a/code/frontend/src/styles/LoginModal.module.css
+++ b/code/frontend/src/styles/LoginModal.module.css
@@ -46,6 +46,11 @@
 }
 
 .input_account_info_box:focus {
+  border-color: var(--electric-green);
+  box-shadow: none;
+}
+
+.input_account_info_box:hover {
   background-color: lightgreen !important;
   border-color: var(--electric-green);
   box-shadow: none;
