--- a/code/frontend/src/styles/global.css
+++ b/code/frontend/src/styles/global.css
@@ -22,6 +22,10 @@ span {
   color: var(--electric-green) !important;
 }
 
+#main-navbar {
+  margin-top: 10px;
+}
+
 .App{
   display: flex;
   flex-direction: column;
