--- a/code/frontend/src/styles/AccountRecoveryModal.module.css
+++ b/code/frontend/src/styles/AccountRecoveryModal.module.css
@@ -2,15 +2,15 @@
     display: flex;
     align-items: center;
     flex-direction: column;
-    width: 70rem;
+    width: 100rem;
     height: 30rem;
   }
 
 .banner_box {
-    height: 200px;
+    height: 17rem;
     display: flex;
     align-self: center;
-    width: 70rem;
+    width: 100rem;
     justify-content: center;
     margin-bottom: 10px;
   }
@@ -18,17 +18,11 @@
   .banner_text {
     align-self: flex-end;
     text-align: center;
-    font-size: 50px;
-    text-shadow: 3px 3px darkgreen;
-    cursor: pointer;
-  }
-  
-  .banner_text {
-    align-self: center;
-    text-align: center;
     font-size: 100px;
-    text-shadow: 5px 5px darkgreen;
+    text-shadow: 5px 5px darkred;
     cursor: pointer;
+    color: red;
+    margin-bottom: 11px;
   }
 
   .account_recovery_text {
@@ -36,6 +30,8 @@
     margin-bottom: 30px;
     text-align: center;
     margin-top: 20px;
+    color: red;
+    text-shadow: 2px 2px darkred;
   }
   
   .account_recovery_form {
@@ -44,8 +40,8 @@
     align-items: center;
     height: 300px;
     width: 500px;
-    box-shadow: var(--electric-green) 0px 5px 15px;
-    border: solid var(--electric-green-50);
+    box-shadow: red 0px 5px 15px;
+    border: solid rgba(139, 0, 0, 0.5);
     border-radius: 20px;
   }
   
@@ -58,7 +54,6 @@
     margin-bottom: 20px;
     margin-top: 0px;
     transition: .3s;
-    color: black;
     display: flex;
     width: 300px;
     border: none;
@@ -73,7 +68,6 @@
   
   .inputField:hover{
     background-color: rgb(70,70,70) !important;
-    color: white;
   }
   
   .inputField:active {
@@ -81,7 +75,7 @@
   }
   
   .recovery_error, .recovery_form_text {
-    color: green !important;
+    color: darkred;
     text-align: center;
     font-size: 18px;
     margin-top: -10px;
@@ -90,7 +84,7 @@
   }
 
   .recovery_error {
-    color: red !important;
+    color: red;
   }
 
   .button_box {
@@ -112,7 +106,7 @@
     font-size: 20px;
     font-weight: bolder;
     cursor: pointer;
-    color: var(--electric-green);
+    color: darkred;
   }
   
   .button_box > :hover {
@@ -122,16 +116,73 @@
   }
   
   .button_box > :active {
-    border-color: var(--electric-green) !important;
-    color: var(--electric-green) !important;
+    border-color: darkred !important;
+    color: darkred !important;
+  }
+
+  
+  @media (max-width:770px) {
+    .banner_text {
+      font-size: 90px;
+    }
   }
   
-  @media (max-width:375px) {
-    .account_recovery_text {
-      font-size: 20px;
+  @media (max-width:650px) {
+    .banner_text {
+      font-size: 80px;
     }
+  }
   
-    .account_recovery_form > input {
-      width: 16rem;
+  @media (max-width:575px) {
+    .banner_text {
+      font-size: 70px;
+      text-shadow: 4px 4px darkred;
+    }
+  }
+  
+  @media (max-width:500px) {
+    .banner_text {
+      font-size: 60px;
+    }
+
+    .account_recovery_form {
+      width: 400px;
+    }
+
+    .account_recovery_text {
+      font-size: 25px;
+      margin-bottom: 30px;
+      margin-top: 30px;
+    }
+  }
+
+  @media (max-width:430px) {
+    .banner_text {
+      font-size: 40px;
+      text-shadow: 3px 3px darkred;
+    }
+
+    .account_recovery_form {
+      width: 300px;
+    }
+
+    .account_recovery_text {
+      font-size: 25px;
+      margin-bottom: 30px;
+      margin-top: 30px;
+    }
+
+    .inputField {
+      width: 250px;
+    }
+
+    .button_box {
+      width: 250px;
+    }
+
+    .button_box > *{
+      width: 120px;
+      height: 40px;
+      font-size: 16px;
     }
   }
