--- a/code/frontend/src/styles/AccountRecoveryModal.module.css
+++ b/code/frontend/src/styles/AccountRecoveryModal.module.css
@@ -19,9 +19,9 @@
     align-self: flex-end;
     text-align: center;
     font-size: 100px;
-    text-shadow: 5px 5px darkred;
+    text-shadow: 5px 5px darkgreen;
     cursor: pointer;
-    color: red;
+    color: var(--electric-green);
     margin-bottom: 11px;
   }
 
@@ -29,9 +29,9 @@
     font-size: 30px;
     margin-bottom: 30px;
     text-align: center;
-    margin-top: 20px;
-    color: red;
-    text-shadow: 2px 2px darkred;
+    margin-top: 30px;
+    color: var(--electric-green);
+    text-shadow: 2px 2px darkgreen;
   }
 
   .account_recovery_success_text {
@@ -44,8 +44,8 @@
     align-items: center;
     height: 300px;
     width: 500px;
-    box-shadow: red 0px 5px 15px;
-    border: solid rgba(139, 0, 0, 0.5);
+    box-shadow: whitesmoke 0px 5px 15px;
+    border: solid grey;
     border-radius: 20px;
   }
   
@@ -84,7 +84,7 @@
   }
   
   .recovery_error, .recovery_form_text {
-    color: darkred;
+    color: grey;
     text-align: center;
     font-size: 18px;
     margin-top: -10px;
@@ -93,7 +93,7 @@
   }
 
   .recovery_error {
-    color: red;
+    color: whitesmoke;
   }
 
   .button_box {
@@ -115,7 +115,7 @@
     font-size: 20px;
     font-weight: bolder;
     cursor: pointer;
-    color: darkred;
+    color: green;
   }
   
   .button_box > :hover {
@@ -125,8 +125,8 @@
   }
   
   .button_box > :active {
-    border-color: darkred !important;
-    color: darkred !important;
+    border-color: grey !important;
+    color: grey !important;
   }
 
   
@@ -145,7 +145,7 @@
   @media (max-width:575px) {
     .banner_text {
       font-size: 70px;
-      text-shadow: 4px 4px darkred;
+      text-shadow: 4px 4px grey;
     }
   }
   
@@ -168,7 +168,7 @@
   @media (max-width:430px) {
     .banner_text {
       font-size: 40px;
-      text-shadow: 3px 3px darkred;
+      text-shadow: 3px 3px grey;
     }
 
     .account_recovery_form {
