--- a/code/frontend/src/styles/SignUpModal.module.css
+++ b/code/frontend/src/styles/SignUpModal.module.css
@@ -9,8 +9,9 @@
   align-self: flex-end;
   text-align: center;
   font-size: 100px;
-  text-shadow: 5px 5px darkblue;
+  text-shadow: 5px 5px darkgreen;
   cursor: pointer;
+  color: var(--electric-green) !important;
 }
 
 .modal_body {
@@ -20,21 +21,17 @@
   flex-direction: column;
 }
 
-.modal_body * {
-  color: blue !important;
-}
-
 .user_signup_form {
     display: flex;
     flex-direction: column;
     align-items: center;
     margin-top: 10px;
     margin-bottom: 5rem;
-    border: solid darkblue;
+    border: solid grey;
     border-radius: 20px;
     width: 40%;
     padding-top: 20px;
-    box-shadow: blue 0px 5px 15px;
+    box-shadow: whitesmoke 0px 5px 15px;
   }
 
 .signup_message {
@@ -43,7 +40,7 @@
   padding-bottom: 5px;
   width: 200px;
   text-align: center;
-  text-shadow: 3px 3px darkblue;
+  text-shadow: 3px 3px darkgreen;
   font-size: 35px;
 }
 
@@ -124,25 +121,30 @@
   font-size: 20px;
   font-weight: bolder;
   cursor: pointer;
+  color: green;
 }
 
 .button_box > :hover {
   background-color: rgb(35,35,35) !important;
-  color: white !important;
-  border-color: white;
+  color: whitesmoke !important;
+  border-color: whitesmoke;
 }
 
 .button_box > :active {
-  border-color: blue !important;
-  color: blue !important;
+  border-color: whitesmoke !important;
+  color: whitesmoke !important;
 }
 
 .already_have_account_button {
-  color: rgb(200,200,200, .6) !important;
+  color: grey !important;
   border: none;
   margin-top: 10px;
   margin-bottom: 10px;
   text-decoration: underline;
+}
+
+.already_have_account_button:hover {
+  color: whitesmoke !important;
 }
 
 @media (max-width:750px) {
