--- a/code/frontend/src/styles/LoginModal.module.css
+++ b/code/frontend/src/styles/LoginModal.module.css
@@ -152,7 +152,7 @@
 @media (max-width:575px) {
   .banner_text {
     font-size: 70px;
-    text-shadow: 4px 4px grey;
+    text-shadow: 4px 4px darkgreen;
   }
 }
 
@@ -165,7 +165,7 @@
 @media (max-width:430px) {
   .banner_text {
     font-size: 50px;
-    text-shadow: 3px 3px grey;
+    text-shadow: 3px 3px darkgreen;
   }
 }
 
